# DieselLinker

./: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md
.github/workflows/: release.yml  rust.yml
book/: book.toml
book/src/: SUMMARY.md  async_support.md  custom_error_types.md  eager_loading.md  getting_started.md  introduction.md  lazy_loading.md  relation_attribute.md
examples/: README.md  basic_usage.rs
src/: lib.rs  relation_macro.rs
src/utils/: mod.rs  parser.rs  validation.rs
tests/: async_integration_test.rs  integration_test.rs  mysql_test.rs  postgres_test.rs  schema.rs
tests/ui/fail/: 01-unknown-attribute.rs  01-unknown-attribute.stderr  02-superfluous-fk.rs  02-superfluous-fk.stderr  03-superfluous-join-table.rs  03-superfluous-join-table.stderr  04-fk-on-many-to-many.rs  04-fk-on-many-to-many.stderr
