[package]
name = "diesel_linker"
version = "1.3.0"
edition = "2021"
description = "A procedural macro to link Diesel models"
authors = ["Paterne G. G. paterne81@hotmail.fr"]
repository = "https://github.com/teamflp/DieselLinker"
license = "MIT OR Apache-2.0"
keywords = ["diesel", "proc-macro", "linker", "relation", "database"]
categories = ["database", "macros", "orm"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
diesel = { version = "2.2.2", features = ["postgres", "postgres_backend", "sqlite", "mysql"] }
diesel-async = { version = "0.5.0", features = ["postgres", "mysql", "tokio", "sync-connection-wrapper"] }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
Inflector = "0.11.4"

[dev-dependencies]
diesel = { version = "2.2.2", features = ["sqlite", "mysql", "postgres", "postgres_backend"] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
trybuild = "1.0"
tokio = { version = "1", features = ["full"] }

